--- a/package.json
+++ b/package.json
@@ -55,7 +55,9 @@
     "utils-json-parse": "^1.0.0",
     "validate.io-function": "^1.0.2",
     "validate.io-object": "^1.0.4",
-    "validate.io-string-primitive": "^1.0.0"
+    "validate.io-positive-integer": "^1.0.0",
+    "validate.io-string-primitive": "^1.0.0",
+    "validate.io-string-primitive-array": "^1.0.0"
   },
   "devDependencies": {
     "@kgryte/noop": "^1.0.0",
