--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     {
       "name": "Athan Reines",
       "email": "kgryte@gmail.com"
+    },
+    {
+      "name": "Venkata krishna Sundararajan",
+      "email": "vkvenkat94@gmail.com"
     }
   ],
   "bin": {
